--- a/WS1/R0333-ws1.html
+++ b/WS1/R0333-ws1.html
@@ -16,7 +16,7 @@
 <hr/>
 <div id="exercise1">
   <h3>Exercise 1 - Setup the environment</h3>
-  <p>Open the Node.js command prompt. Run the npx command to set up local server environment for Node.
+	<p>Install <a href="http://nodejs.org">Node.js</a> if needed. Open the Node.js command prompt. Run the npx command to set up local server environment for Node.
     This might take a while.</p>
   <p><code>$ npx create-react-app workshop1<br>
     $ cd workshop1 <br>
